--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd
@@ -80,6 +80,32 @@ Load.Install <- function(Package.Names, Quiet = FALSE, Update.All = FALSE) {
         suppressPackageStartupMessages(library(install.pkgs, character.only = TRUE, quietly = Quiet, verbose = FALSE))
     }
 }
+
+# Değiştirmeyin.
+## Çift ve tek kuyruklu t-testi yapabilmek için gerekli fonksiyon.
+hoCoef <- function(object, term = 2, bo= 0, alt = c("two.sided", "less", "greater")) {
+    alt <- match.arg(alt)
+    if (!"lm" %in% class(object))
+        STOP("'object' must be from 'lm'.")
+    if (!term > 0)
+        STOP("'term' must be a positive number.")
+    tmp <- summary(object)$coefficients
+    if (term>length(rownames(tmp)))
+        STOP("'term' is greater than number of terms in the model.")
+    est <- tmp[term,"Estimate"]
+    se <- tmp[term,"Std. Error"]
+    t <- (est - bo)/se
+    df <- object$df.residual
+    switch(alt,
+           less = {p.value <- stats::pt(t, df, lower.tail = TRUE)},
+           greater = {p.value <- stats::pt(t,df,lower.tail=FALSE)},
+           two.sided = {p.value <- 2*stats::pt(abs(t), df, lower.tail = FALSE)}
+    )
+    res <- cbind(term,bo,est,se,t,df,p.value)
+    colnames(res) <- c("term", "Ho Value", "Estimate", "Std. Error", "T", "df", "p value")
+    rownames(res) <- ""
+    res
+}
 ```
 
 ----
@@ -106,7 +132,7 @@ suppressWarnings(library("devtools"))
 
 # Gerekli paketlerin yüklenmesi.
 ## Paketleri yüklemeden önce Load.Install fonksiyonunun yüklenip çalıştığından emin olun.
-Load.Install(c("rstudioapi", "readxl", "plyr", "dplyr", "tidyr", "stringr", "stringi", "Hmisc", "reshape2", "scales", "ggplot2", "xtable", "DT", "latex2exp", "forecast", "WDI", "fpp2", "fpp3", "datasets", "quantmod", "FinYang/tsdl", "ggseas", "slider", "ecm", "wooldridge", "dynlm", "car", "FSA", "AER", "stargazer"))
+Load.Install(c("rstudioapi", "readxl", "plyr", "dplyr", "tidyr", "stringr", "stringi", "Hmisc", "reshape2", "scales", "ggplot2", "xtable", "DT", "latex2exp", "forecast", "WDI", "fpp2", "fpp3", "datasets", "quantmod", "FinYang/tsdl", "ggseas", "slider", "ecm", "wooldridge", "dynlm", "car", "AER", "stargazer"))
 ```
 
 ## Seed {#Settings.Seed}
@@ -160,7 +186,7 @@ setwd(paste0(main.path)) ## Yeni çalışma klasörü (yani working directory) b
 ## $t$-testi {#t.test}
 - Basit zaman serisi modellerinde $t$-testi uygulamak için 3 farklı fonksiyon kullanabiliriz.
     + `pt` fonksiyonu ile model tahmininden elde ettiğimiz $t$-istatistiğine ait $p$-değerini çift ve tek kuyruklu hipotez testleri için hesaplayabiliriz.
-    + [`FSA`](https://cran.r-project.org/web/packages/FSA/index.html) R paketindeki `hoCoef` fonksiyonunda model tahminini kullanarak çift ve tek kuyruklu hipotez testleri uygulayabiliriz.
+    + `hoCoef` fonksiyonunda model tahminini kullanarak çift ve tek kuyruklu hipotez testleri uygulayabiliriz.
     + [`car`](https://cran.r-project.org/web/packages/car/index.html) R paketindeki `linearHypothesis` fonksiyonunda model tahminini kullanarak çift kuyruk hipotez testini uygulayabiliriz.
 
 ### Örnek: 1 {#t.test.Example.1}
@@ -567,7 +593,7 @@ estimate.beta + (t.critic * estimate.se) ## Güven aralığı üst limiti.
 - Sonra yüklediğimiz bu verinin metadatasını ve yapısını inceleyelim.
 - Daha sonra yüklediğimiz veriyi kullanarak aşağıdaki statik modeli tahmin edelim.
     + Model 1 (Statik): $\ln(invpc_{t}) = \beta_{0} + \beta_{1}\ln(price_{t}) + u_{t}$
-- Daha sonra Model 1 tahminini kullanarak aşağıdaki hipotezleri [`FSA`](https://cran.r-project.org/web/packages/FSA/index.html) R paketindeki `hoCoef` fonksiyonuyla test edelim.
+- Daha sonra Model 1 tahminini kullanarak aşağıdaki hipotezleri `hoCoef` fonksiyonuyla test edelim.
     + Hipotez Testi 1 (Çift Kuyruk $t$-testi): $H_{0}: \beta_{1} = 0 \;\; \text{vs.} \;\; H_{1}: \beta_{1} \neq 0$
     + Hipotez Testi 2 (Çift Kuyruk $t$-testi): $H_{0}: \beta_{1} = 1 \;\; \text{vs.} \;\; H_{1}: \beta_{1} \neq 1$
 - Daha sonra Model 1'de kullandığımız bağımlı ve bağımsız değişkenlerde trend olup olmadığını anlamak için bu değişkenleri trend ($t$) üzerine regres edip aşağıdaki modelleri tahmin edelim.
@@ -577,7 +603,7 @@ estimate.beta + (t.critic * estimate.se) ## Güven aralığı üst limiti.
 - Daha sonra Model 1'deki bağımlı ve bağımsız değişkenlerde trend bulunduğundan dolayı **sahte regresyon problemi** ile karşılaşmamak için trend değişkeni eklenmiş aşağıdaki statik modeli tahmin edelim.
     + Model 4 (Trendli Statik): $\ln(invpc_{t}) = \beta_{0} + \beta_{1}\ln(price_{t}) + \beta_{2}t + u_{t}$
         * Model 4 Log-Log fonksiyonel formunda olduğundan trende ait $\beta_{2}$ parametresi bağımlı değişken $invpc_{t}$'deki büyüme oranını ifade edecektir. Yani, üstel trend modeli kullanılmıştır.
-- Son olarak Model 4 tahminini kullanarak aşağıdaki hipotezleri [`FSA`](https://cran.r-project.org/web/packages/FSA/index.html) R paketindeki `hoCoef` fonksiyonuyla test edelim.
+- Son olarak Model 4 tahminini kullanarak aşağıdaki hipotezleri `hoCoef` fonksiyonuyla test edelim.
     + Hipotez Testi 3 (Çift Kuyruk $t$-testi): $H_{0}: \beta_{1} = 0 \;\; \text{vs.} \;\; H_{1}: \beta_{1} \neq 0$
     + Hipotez Testi 4 (Çift Kuyruk $t$-testi): $H_{0}: \beta_{2} = 0 \;\; \text{vs.} \;\; H_{1}: \beta_{1} \neq 0$
 ```{r Trend.Variable.Example.1}
