--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
@@ -39,7 +39,7 @@ div.main-container {
 
 ```{r Settings.Code.Chunk, include = FALSE, purl = FALSE}
 # Değiştirmeyin.
-knitr::opts_chunk$set(cache = TRUE, collapse = TRUE, comment = "#>", echo = TRUE, engine = "R", error = FALSE, eval = TRUE, fig.align = "center", fig.height = 9, fig.width = 16, highlight = TRUE, include = TRUE, message = TRUE, prompt = FALSE, purl = TRUE, results = "markup", rows.print = 5, strip.white = TRUE, tidy = FALSE, tidy.opts = list(width.cutoff = 80), warning = TRUE)
+knitr::opts_chunk$set(cache = TRUE, collapse = TRUE, comment = "#>", echo = TRUE, engine = "R", error = FALSE, eval = TRUE, fig.align = "center", fig.height = 5, fig.width = 7, out.width = "100%", highlight = TRUE, include = TRUE, message = TRUE, prompt = FALSE, purl = TRUE, results = "markup", rows.print = 5, strip.white = TRUE, tidy = FALSE, tidy.opts = list(width.cutoff = 80), warning = TRUE)
 ```
 ```{r Settings.Mirros, include = FALSE, purl = FALSE, cache = TRUE}
 # Değiştirmeyin.
