okara package implemented

--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd
@@ -49,37 +49,7 @@ options(repos = r)
 ```
 ```{r Settings.Functions, include = FALSE, cache = TRUE}
 # Değiştirmeyin.
-## Paketleri indirmek ve yüklemek için gerekli fonksiyon.
-Load.Install <- function(Package.Names, Quiet = FALSE, Update.All = FALSE) {
-    is_installed <- function(my.pkgs) is.element(my.pkgs, utils::installed.packages()[ ,1])
-    github.pkgs <- grep("^.*?/.*?$", Package.Names, value = TRUE)
-    github.bare.pkgs <- sub(".*?/", "", github.pkgs)
-    cran.pkgs <- Package.Names[!(Package.Names %in% github.pkgs)]
-    all.pkgs <- c(cran.pkgs, github.bare.pkgs)
-    cran.missing <- cran.pkgs[which(!is_installed(cran.pkgs))]
-    github.missing <- github.pkgs[which(!is_installed(github.bare.pkgs))]
-    if (Update.All == TRUE) {
-        cran.missing <- cran.pkgs
-        github.missing <- github.pkgs
-    } else {
-        cran.missing <- cran.pkgs[which(!is_installed(cran.pkgs))]
-        github.missing <- github.pkgs[which(!is_installed(github.bare.pkgs))]
-    }
-    if (length(cran.missing) > 0) {
-        suppressWarnings(utils::install.packages(cran.missing, quiet = Quiet, dependencies = TRUE))
-    }
-    if (length(github.missing) > 0) {
-        suppressWarnings(devtools::install_github(github.missing, quiet = Quiet, dependencies = TRUE))
-    }
-    failed.install <- all.pkgs[which(!is_installed(all.pkgs))]
-    if (length(failed.install) > 0) {
-        warning(paste0("Some packages failed to install: ", paste(failed.install, collapse = ", "), "."))
-    }
-    install.pkgs <- all.pkgs[which(is_installed(all.pkgs) == TRUE)]
-    for (install.pkgs in install.pkgs) {
-        suppressPackageStartupMessages(library(install.pkgs, character.only = TRUE, quietly = Quiet, verbose = FALSE))
-    }
-}
+
 ```
 
 ----
@@ -89,7 +59,7 @@ Load.Install <- function(Package.Names, Quiet = FALSE, Update.All = FALSE) {
 - Yanında **Değiştirmeyin** ibaresi bulunan hiçbir kodu ve/veya satırı değiştirmeyin.
 - Yazılardakı ve kodlardaki açıklamaları dikkatlice okuyun.
 - Kodların sırasını **mümkün olduğunca** değiştirmeyin. Aksi taktirde hata ile karşılaşabilirsiniz.
-- [Paketler](#Packages) bölümünde, gerekli [R paketlerini](https://cran.r-project.org/web/packages/available_packages_by_name.html) bu belgede kodu verilmiş `Load.Install` fonksiyonunu kullanarak indirin ve yükleyin.
+- [Paketler](#Packages) bölümünde, gerekli [R paketlerini](https://cran.r-project.org/web/packages/available_packages_by_name.html) [`okara`](https://github.com/omerkara/okara) paketindeki `Load.Install` fonksiyonunu kullanarak indirin ve yükleyin.
 - [Seed](#Seed) bölümünde, istediğiniz sayıyı kullanabilirsiniz. Rassal olarak seçilen değerler, eğer varsa, seçtiğiniz sayıya göre değişecektir.
 - R hakkında daha fazla bilgi için, benim yazdığım [R mini BootCamp](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html) adlı İngilizce kaynaktan faydalanabilirsiniz.
 
@@ -97,15 +67,15 @@ Load.Install <- function(Package.Names, Quiet = FALSE, Update.All = FALSE) {
 
 # Hazırlık {#Preparation}
 ## Paketler {#Settings.Packages}
-- [R paketlerini](https://cran.r-project.org/web/packages/available_packages_by_name.html) `Load.Install` fonksiyonunu kullanarak indirin ve/veya yükleyin.
+- [R paketlerini](https://cran.r-project.org/web/packages/available_packages_by_name.html) [`okara`](https://github.com/omerkara/okara) paketindeki `Load.Install` fonksiyonunu kullanarak indirin ve/veya yükleyin.
 ```{r Settings.Packages, cache = TRUE}
-# Devtools paketinin yüklenmesi
-## Load.Install fonksiyonunun çalışması için devtools paketi gereklidir.
-if("devtools" %in% rownames(installed.packages()) == FALSE) {suppressWarnings(install.packages("devtools"))}
-suppressWarnings(library("devtools"))
+# Devtools ve okara paketlerinin yüklenmesi.
+if("devtools" %in% rownames(utils::installed.packages()) == FALSE) {suppressWarnings(install.packages("devtools"))}
+suppressWarnings(library("devtools")) ## devtools paketi, okara paketinin yüklenmesi için gereklidir.
+suppressWarnings(suppressMessages(devtools::install_github("omerkara/okara")))
+suppressWarnings(library("okara")) ## okara paketi.
 
 # Gerekli paketlerin yüklenmesi.
-## Paketleri yüklemeden önce Load.Install fonksiyonunun yüklenip çalıştığından emin olun.
 Load.Install(c("rstudioapi", "readxl", "plyr", "dplyr", "tidyr", "stringr", "stringi", "Hmisc", "reshape2", "scales", "lubridate", "ggplot2", "xtable", "DT", "latex2exp", "forecast", "WDI", "fpp2", "fpp3", "datasets", "quantmod", "FinYang/tsdl", "ggseas", "slider", "ecm", "wooldridge", "dynlm", "car"))
 ```
 
