some housekeeping before Summer 2021

--- a/content/courses/economics/02-ee.Rmd
+++ b/content/courses/economics/02-ee.Rmd
@@ -39,8 +39,8 @@ To inform you about the important announcements related to the course on time, a
 ## Syllabus and Important Dates
 | Normal Education | Secondary Education | Summer School |
 | :--- | :--- |:--- |
-| [Syllabus](`r paste0(economics.path, "EE/Economics_NE - Syllabus (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` | [Syllabus](`r paste0(economics.path, "EE/Economics_SE - Syllabus (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` |[Syllabus](`r paste0(economics.path, "EE/Economics - Syllabus (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` |
-| [Important Dates](`r paste0(economics.path, "EE/Economics_NE - Important Dates (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` | [Important Dates](`r paste0(economics.path, "EE/Economics_SE - Important Dates (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` |[Important Dates](`r paste0(economics.path, "EE/Economics - Important Dates (Kara).pdf")`) `r emo::ji(eng)``r emo::ji(to.be.updated)` |
+| [Syllabus](`r paste0(economics.path, "EE/Economics_NE - Syllabus (Kara).pdf")`) `r emo::ji(eng)` | [Syllabus](`r paste0(economics.path, "EE/Economics_SE - Syllabus (Kara).pdf")`) `r emo::ji(eng)` |[Syllabus](`r paste0(economics.path, "EE/Economics - Syllabus (Kara).pdf")`) `r emo::ji(eng)` |
+| [Important Dates](`r paste0(economics.path, "EE/Economics_NE - Important Dates (Kara).pdf")`) `r emo::ji(eng)` | [Important Dates](`r paste0(economics.path, "EE/Economics_SE - Important Dates (Kara).pdf")`) `r emo::ji(eng)` |[Important Dates](`r paste0(economics.path, "EE/Economics - Important Dates (Kara).pdf")`) `r emo::ji(eng)` |
 
 ## Course Book
 - [Book Selection Explanation](`r paste0(economics.path, "Economics_Book Selection Explanation.pdf")`) `r emo::ji(eng)`
