--- a/content/courses/zaman-serileri-analizi/_index.Rmd
+++ b/content/courses/zaman-serileri-analizi/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Zaman Serileri Analizi"
-summary: "Verildiği son bölüm ve dönem: İktisat - Bahar 2021"
+summary: "Verildiği son bölüm ve dönem: İktisat - Yaz 2021"
 weight: 21
 categories: [Ders]
 tags: [zaman serileri analizi, türkçe, turkish]
