--- a/content/courses/economics/_index.Rmd
+++ b/content/courses/economics/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Economics"
-summary: "The last taught department and semester: Computer Engineering - Fall 2020 and Electrical-Electronics Engineering  - Fall 2020"
+summary: "The last taught department and semester: Computer Engineering - Summer 2021 and Electrical-Electronics Engineering  - Summer 2021"
 weight: 70
 categories: [Ders]
 tags: [economics, ingilizce, english]
