some problems in figures

--- a/content/post/2020-10-04-yakinda-yayindayiz/index.tr.Rmd
+++ b/content/post/2020-10-04-yakinda-yayindayiz/index.tr.Rmd
@@ -74,7 +74,7 @@ Akademi Ekonometri, çok yoğun tempoda çalışan biz akademisyenler tarafında
 Ekonometri odaklı bir platform olan Akademi Ekonometri'deki hedeflerimizden ilki ekonometrinin sadece teorik kısmını anlatmaktan ziyade, teorik bilgilerin kodlama ile uygulanmasını da olabildiğince yalın ve detaylı bir şekilde anlatmak. Bu nedenle Akademi Ekonometri olarak uygulamalı ekonometri ve büyük bir tutkuyla bağlı olduğumuz [R](https://www.r-project.org/)'a ve onun yakışıklı kardeşi [RStudio](https://rstudio.com/)'ya çok önem veriyoruz. Hatta o kadar önem veriyoruz ki, üşenmedik ve sizin için Akademi Ekonometri odak ağırlıklarını pasta grafiği kullanarak Grafik \@ref(fig:akademiekonometri)'de hemen gösterelim istedik. Evet yanlış görmediniz, [$\LaTeX$](https://www.latex-project.org/) hakkında da bol bol paylaşımda bulunacağız.   
 ```{r akademiekonometri, echo = FALSE, fig.cap = "Akademi Ekonometri Odak Ağırlıkları"}
 par(mar = c(0, 2, 0, 2))
-pie(c(90, 105, 105, 30, 30), c("Teorik Ekonometri", "Uygulamalı\nEkonometri", "R ve RStudio", TeX("$\\LaTeX$"), "Ekonomi"), col = c("yellow", "red", "blue", "darkgreen", "lightgreen"), clockwise = TRUE, init.angle = -50, border = NA)
+pie(c(90, 105, 105, 30, 30), c("Teorik Ekonometri", "Uygulamalı\nEkonometri", "R ve RStudio", latex2exp::TeX("$\\LaTeX$"), "Ekonomi"), col = c("yellow", "red", "blue", "darkgreen", "lightgreen"), clockwise = TRUE, init.angle = -50, border = NA)
 ```
 
 Akademi Ekonometri web sitesinde sizlerle paylaşmayı plandığımız konular genel olarak şunlar: [YouTube kanalımızdaki](https://www.youtube.com/c/AkademiEkonometri) ders (ekonometri ve ekonomi) videoları ve notları, uygulamalı ekonometri video ve R kodları, R'da kolay kodlama için bilgi ve ip uçları, sizlerden gelen ekonometri ve R ile ilgili olan istek ve öneriler. Hatta örnek olması için ilk paylaşımlarımızı yaptık bile! Hadi durma, örnek [ders anlatımı](/post/ders-anlatimi-ornek/) ve [R kodu](/post/r-kodu-ornek/) için tıkla!
